--- a/dashboard/clients/login.html
+++ b/dashboard/clients/login.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Client Login</title>
-<link rel="stylesheet" href="../css/client.css">
+<link rel="stylesheet" href="/css/client.css">
 </head>
 <body>
 <div class="login-container">
