--- a/dashboard/administrative/management/admin/mfa.html
+++ b/dashboard/administrative/management/admin/mfa.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Admin MFA</title>
-<link rel="stylesheet" href="../css/admin.css">
+<link rel="stylesheet" href="/dashboard/administrative/management/admin/css/admin.css">
 </head>
 <body>
 <div class="login-container">
@@ -16,8 +16,8 @@
 </div>
 
 <script type="module">
-import { auth } from '../../../firebase/firebase-config.js';
-import { redirect } from '../../../firebase/utils.js';
+import { auth } from '/firebase/firebase-config.js';
+import { redirect } from '/firebase/utils.js';
 
 // Firebase MFA logic placeholder (actual implementation depends on SMS/App)
 // For demonstration, we assume a simple check
