--- a/dashboard/administrative/management/admin/settings.html
+++ b/dashboard/administrative/management/admin/settings.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Admin Settings</title>
-<link rel="stylesheet" href="../css/admin.css">
+<link rel="stylesheet" href="/dashboard/administrative/management/admin/css/admin.css">
 </head>
 <body>
 <h2>Admin Settings</h2>
@@ -14,8 +14,8 @@
 </div>
 
 <script type="module">
-import { auth, changePassword } from '../../../firebase/auth.js';
-import { redirect } from '../../../firebase/utils.js';
+import { auth, changePassword } from '/firebase/auth.js';
+import { redirect } from '/firebase/utils.js';
 
 auth.onAuthStateChanged(user=>{
     if(!user) redirect('login.html');
